<resources>
    <string name="app_name">FRN</string>
    <string name="song_image">Song Image</string>
    <string name="song_playing">Song playing</string>
    <string name="authors_and_features">Authors and features</string>
    <string name="skip_next_song">Skip next Song</string>
    <string name="play_or_pause_song">Play or pause Song</string>
    <string name="skip_previous_song">Skip previous song</string>
    <string name="_0_00_0_00">0:00/0:00</string>
</resources>